examples/test/testpolicy10199.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10199
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key8: value0
      key10: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value14
          key4: value40
          key12: value10
      podSelector:
        matchLabels:
          key20: value15
